name:              lollerskates
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Corbin Simpson
maintainer:        Corbin Simpson
synopsis:          Yesod web application for League of Legends
description:       A League of Legends assistant which provides handy analyses
                   of in-game items.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://lollerskates.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Handler.Bravery
                     Handler.Root
                     Lol.Bravery
                     Lol.FD
                     Lol.Items
                     Lol.Loller

    ghc-options:   -Wall -threaded -O0

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

executable         lollerskates
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded -O0

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base             >= 4     && < 5
                 , yesod-core       >= 0.9.3 && < 0.10
                 , yesod-static     >= 0.3.1 && < 0.4
                 , yesod-default    >= 0.4   && < 0.5
                 , clientsession    >= 0.7.3 && < 0.8
                 , bytestring       >= 0.9   && < 0.10
                 , text             >= 0.11  && < 0.12
                 , template-haskell
                 , hamlet           >= 0.10  && < 0.11
                 , shakespeare-text >= 0.10  && < 0.11
                 , wai              >= 0.4.2 && < 0.5
                 , containers       >= 0.4   && < 0.5
                 , mtl              >= 2.0.1 && < 2.1
                 , random           >= 1.0   && < 1.1
                 , transformers     >= 0.2   && < 0.3
