name:              lollerskates
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Corbin Simpson
maintainer:        Corbin Simpson
synopsis:          Yesod web application for League of Legends
description:       A League of Legends assistant which provides handy analyses
                   of in-game items.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://lollerskates.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Handler.Bravery
                     Handler.Root
                     Lol.Bravery
                     Lol.Champs
                     Lol.FD
                     Lol.Helpers
                     Lol.Items
                     Lol.Loller
                     Lol.Spells
                     Widget

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

executable         lollerskates
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2 -optl-static -static

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod-core                    >= 0.9.3      && < 0.10
                 , yesod-static                  >= 0.3.1      && < 0.4
                 , yesod-default                 >= 0.5        && < 0.6
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-text              >= 0.10       && < 0.11
                 , wai                           >= 0.4.2      && < 0.5
                 , transformers                  >= 0.2        && < 0.3
                 , containers   >= 0.4   && < 0.5
                 , mtl          >= 2.0.1 && < 2.1
                 , random       >= 1.0   && < 1.1
                 , split        >= 0.1.4 && < 0.2
                 , transformers >= 0.2   && < 0.3
                 , yesod-form   >= 0.3.4 && < 0.4
